@@ -5,6 +5,7 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+ - 01-12-2005 fixed: .nfo files for stacked titles based on the first stacked filename
  - 01-12-2005 added: File Browser Dialog - requires skinning
  - 01-12-2005 fixed: Path history was incorrect for media windows started with XBMC.ActivateWindow(window,path)
  - 01-12-2005 fixed: Memory leak in multicoloured text rendering (edit, rss controls)
